@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 11.00
+# Visual Studio 2010
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "mphidflash", "mphidflash.vcxproj", "{64F3259A-F3BA-2E34-4324-695304BAA79D}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Win32 = Debug|Win32
+		Release|Win32 = Release|Win32
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{64F3259A-F3BA-2E34-4324-695304BAA79D}.Debug|Win32.ActiveCfg = Debug|Win32
+		{64F3259A-F3BA-2E34-4324-695304BAA79D}.Debug|Win32.Build.0 = Debug|Win32
+		{64F3259A-F3BA-2E34-4324-695304BAA79D}.Release|Win32.ActiveCfg = Release|Win32
+		{64F3259A-F3BA-2E34-4324-695304BAA79D}.Release|Win32.Build.0 = Release|Win32
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
